# Agentic-Studio

./: .gitignore  LICENSE  Prompts.md  README.md  authenticate_gmail.py  package-lock.json  pyproject.toml  requirements.txt  vercel.json
app/: __init__.py  agent.py  config.py  main.py  models.py  n8n_importer.py  test.py
app/connectors/: gmail.py  snowflake.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
n8n/: Automation.json
