[project]
name = "agentic-garden"
version = "0.1.0"
description = "Simple LangGraph agent for Snowflake analysis and Gmail actions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "google-api-python-client>=2.170.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.6.0",
    "snowflake-connector-python[secure-local-storage]>=3.12.0",
    "uvicorn>=0.32.0",
    "langchain-groq>=1.1.2",
]
